adding map to footer main

--- a/footer-main.html
+++ b/footer-main.html
@@ -2,11 +2,12 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-4 col-md-6 footer-widget footer-about">
-          <h3 class="widget-title">Hubungi Kami</h3>
+          <!-- <h3 class="widget-title">Hubungi Kami</h3> -->
           <img loading="lazy" class="footer-logo" src="images/logo.png" alt="Pustanda" />
           <p>Pusat Penguatan dan Pemberdayaan Bahasa<br />
             Jalan Anyar Km. 4, Sukahati, Citeureup<br />
-            Kabupaten Bogor, Jawa Barat 16810
+            Kabupaten Bogor, Jawa Barat 16810<br />
+            (021) 2909.9245
           </p>
           
           <div class="footer-social" style="color:white;">
@@ -20,9 +21,9 @@
               <li>
                 <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-              </li>
+              </li> -->
               <li>
                 <a href="https://www.tiktok.com/@pustandakemdikbud" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
               </li>
@@ -31,6 +32,17 @@
           <!-- Footer social end -->
         </div>
         <!-- Col end -->
+        <div class="col-lg-8 col-md-8 footer-widget mt-5 mt-md-0 vertical-center">
+          <div style="overflow:hidden;max-width:100%;width:700px;height:300px;border-radius:10px;">
+            <div id="canvas-for-googlemap" style="height:100%; width:100%;max-width:100%;">
+              <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Pusat+Penguatan+dan+Pemberdayaan+Bahasa+(Pustanda),+Kemendikbudristek,+Jalan+Anyar,+RT.002/RW.002,+Sukahati,+Kabupaten+Bogor,+Jawa+Barat,+Indonesia&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+              </iframe>
+            </div>
+            <a class="embedded-map-code" href="https://www.bootstrapskins.com/themes" id="enable-maps-data">premium bootstrap themes</a>
+            <style>#canvas-for-googlemap img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}
+            </style>
+          </div>
+        </div>
         <!--
         <div class="col-lg-4 col-md-6 footer-widget mt-5 mt-md-0">
           <h3 class="widget-title">Jam Layanan</h3>
