--- a/heading.html
+++ b/heading.html
@@ -45,7 +45,7 @@
                         <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Informasi <i class="fa fa-angle-down"></i></a>
                           <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">SAKIP</a></li>
+                            <li><a href="informasisakip.html">SAKIP</a></li>
                           </ul>
                         </li>
 
