--- a/index.html
+++ b/index.html
@@ -30,11 +30,22 @@
           <div class="row">
             <div class="col-lg-6">
               <h3 class="column-title"> </h3>
+
+
             </div>
             <!-- Col end -->
 
             <div class="col-lg-6 mt-5 mt-lg-0">
               <h3 class="column-title"> </h3>
+              <!--
+              <div class="row all-clients">
+                <div class="col-sm-4 col-6">
+                  <figure class="clients-logo">
+                    <a href="#!"><img loading="lazy" class="img-fluid" src="images/clients/client1.png" alt="clients-logo" /></a>
+                  </figure>
+                </div>-->
+                <!-- Client 1 end -->
+
             </div>
             <!-- Col end -->
           </div>
