updating informasisakip, and title

--- a/informasisakip.html
+++ b/informasisakip.html
@@ -16,36 +16,51 @@
       <section class="content">
         <div class="container">
           <!-- Data SAKIP -->
-            <div id="sakip" class="vertical-center-left;" >
-                <div style="padding-left:15px;"><h3>SAKIP PUSTANDA</h3></div>
-                <div class="doc-container">
+            <div id="sakip" class="col-lg-12" style="display:block;" >
+                <div class="row">
+                  <div class="col-lg-12 ml-0" style="text-align:left;">
+                    <span class="btn" style="background-color: rgb(167, 167, 197);"></span>
+                    <span><h3>SAKIP PUSTANDA</h3></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="doc-container">
                     <div class="doc-name">Rencana Strategis (Renstra) Badan Pengembangan dan Pembinaan Bahasa 2020-2024 </div>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(3, 196, 138);border-radius: 5px;background-color:aqua">Buka</span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(49, 78, 243);border-radius: 5px;background-color:rgb(17, 81, 165)">Unduh</span>
+                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
+                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                  </div>
                 </div>
                 <div class="separator"></div>
-                <div class="doc-container">
-                    <span class="doc-name">Laporan Akuntabilitas Kinerja Instansi Pemerintah Tahun 2022 </span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(3, 196, 138);border-radius: 5px;background-color:aqua">Buka</span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(49, 78, 243);border-radius: 5px;background-color:rgb(17, 81, 165)">Unduh</span>
+                <div class="row">
+                  <div class="doc-container">
+                    <div class="doc-name">Laporan Akuntabilitas Kinerja Instansi Pemerintah Tahun 2022 </div>
+                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
+                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                  </div>
                 </div>
                 <div class="separator"></div>
-                <div class="doc-container">
-                    <span class="doc-name">Perjanjian Kinerja Kepala Pusat Penguatan dan Pemberdayaan Bahasa dengan Kepala ,,,,</span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(3, 196, 138);border-radius: 5px;background-color:aqua">Buka</span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(49, 78, 243);border-radius: 5px;background-color:rgb(17, 81, 165)">Unduh</span>
+                <div class="row">
+                  <div class="doc-container">
+                    <div class="doc-name">Perjanjian Kinerja Kepala Pusat Penguatan dan Pemberdayaan Bahasa dengan Kepala ,,,,</div>
+                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
+                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                  </div>
                 </div>
                 <div class="separator"></div>
-                <div class="doc-container">
-                    <span class="doc-name">Rencana Aksi Pustanda Tahun 2022</span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(3, 196, 138);border-radius: 5px;background-color:aqua">Buka</span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(49, 78, 243);border-radius: 5px;background-color:rgb(17, 81, 165)">Unduh</span>
+                <div class="row">
+                  <div class="doc-container">
+                    <div class="doc-name">Rencana Aksi Pustanda Tahun 2022</div>
+                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
+                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                  </div>
                 </div>
                 <div class="separator"></div>
-                <div class="doc-container">
-                    <span class="doc-name">Rencana Kinerja Tahunan Pustanda Tahun 2022</span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(3, 196, 138);border-radius: 5px;background-color:aqua">Buka</span>
-                    <span class="button" style="padding: 2px 5px;border: 1px solid rgb(49, 78, 243);border-radius: 5px;background-color:rgb(17, 81, 165)">Unduh</span>
+                <div class="row">
+                  <div class="doc-container">
+                    <div class="doc-name">Rencana Kinerja Tahunan Pustanda Tahun 2022</div>
+                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
+                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                  </div>
                 </div>
             </div>
         </div>
