adding modal for pdf viewer

--- a/head.html
+++ b/head.html
@@ -16,10 +16,11 @@
 ================================================== -->
 <link rel="icon" type="image/png" href="images/favicon.png" />
 
-<!-- CSS
+<!-- CSS & JS
 ================================================== -->
 <!-- Bootstrap -->
 <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css" />
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <!-- FontAwesome -->
 <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css" />
 <!-- Animation -->
@@ -32,13 +33,3 @@
 <!-- Template styles-->
 <link rel="stylesheet" href="css/style.css" />
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZPMHLV64M"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag("js", new Date());
-  gtag("config", "G-0ZPMHLV64M");
-</script>
