--- a/informasisakip.html
+++ b/informasisakip.html
@@ -24,39 +24,39 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="doc-container">
+                  <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Strategis (Renstra) Badan Pengembangan dan Pembinaan Bahasa 2020-2024 </div>
-                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
+                      <span class="btn btn-warning tombol" data-toggle="modal" data-target="#renstraModal">Buka</span>
                     <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
                   </div>
                 </div>
-                <div class="separator"></div>
+                <div class="col-lg-8 separator"></div>
                 <div class="row">
-                  <div class="doc-container">
+                  <div class="col-lg-8 doc-container">
                     <div class="doc-name">Laporan Akuntabilitas Kinerja Instansi Pemerintah Tahun 2022 </div>
-                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
-                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                    <span class="btn btn-warning tombol">Buka</span>
+                    <span class="btn btn-success tombol">Unduh</span>
                   </div>
                 </div>
-                <div class="separator"></div>
+                <div class="col-lg-8 separator"></div>
                 <div class="row">
-                  <div class="doc-container">
+                  <div class="col-lg-8 doc-container">
                     <div class="doc-name">Perjanjian Kinerja Kepala Pusat Penguatan dan Pemberdayaan Bahasa dengan Kepala ,,,,</div>
-                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
-                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                    <span class="btn btn-warning tombol">Buka</span>
+                    <span class="btn btn-success tombol">Unduh</span>
                   </div>
                 </div>
-                <div class="separator"></div>
+                <div class="col-lg-8 separator"></div>
                 <div class="row">
-                  <div class="doc-container">
+                  <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Aksi Pustanda Tahun 2022</div>
-                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
-                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                    <span class="btn btn-warning tombol">Buka</span>
+                    <span class="btn btn-success tombol">Unduh</span>
                   </div>
                 </div>
-                <div class="separator"></div>
+                <div class="col-lg-8 separator"></div>
                 <div class="row">
-                  <div class="doc-container">
+                  <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Kinerja Tahunan Pustanda Tahun 2022</div>
                     <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
                     <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
@@ -98,6 +98,25 @@
         <!-- Copyright end -->
       </footer>
       <!-- Footer end -->
+
+      <!-- Modal -->
+      <div id="renstraModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">RENSTRA MODAL</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class="modal-body">
+                <iframe src="http://docs.google.com/gview?url=http://lagamonang.github.io/pustanda/files/renstra.pdf&embedded=true" frameborder="0" width="100%" height="380px"></iframe>
+                  <div class="modal-footer" style="height:70px;">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Tutup</button>
+                  </div>
+              </div>
+            </div>
+        </div>
+      </div>
 
       <!-- Javascript Files
   ================================================== -->
