--- a/informasisakip.html
+++ b/informasisakip.html
@@ -108,8 +108,8 @@
                 <h4 class="modal-title">RENSTRA MODAL</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
               </div>
-              <div class="modal-body">
-                <iframe src="http://docs.google.com/gview?url=http://lagamonang.github.io/pustanda/files/renstra.pdf&embedded=true" frameborder="0" width="100%" height="380px"></iframe>
+              <div class="modal-body"> 
+                <iframe src="https://docs.google.com/gview?url=/files/Renstra_Badan_Bahasa_2020--2024.pdf&embedded=true" frameborder="0" width="100%" height="380px"></iframe>
                   <div class="modal-footer" style="height:70px;">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Tutup</button>
                   </div>
