--- a/informasisakip.html
+++ b/informasisakip.html
@@ -105,11 +105,11 @@
             <!-- Modal content-->
             <div class="modal-content">
               <div class="modal-header">
-                <h4 class="modal-title">RENSTRA MODAL</h4>
+                <h4 class="modal-title">RENSTRA BADAN BAHASA 2020-2024</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
               </div>
               <div class="modal-body"> 
-                <iframe src="https://docs.google.com/gview?url=/files/Renstra_Badan_Bahasa_2020--2024.pdf&embedded=true" frameborder="0" width="100%" height="380px"></iframe>
+                <iframe src="https://docs.google.com/gview?url=http://lagamonang.github.ioi/pustanda/files/Renstra_Badan_Bahasa_2020--2024.pdf&embedded=true" frameborder="0" width="100%" height="380px"></iframe>
                   <div class="modal-footer" style="height:70px;">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Tutup</button>
                   </div>
