--- a/informasisakip.html
+++ b/informasisakip.html
@@ -27,7 +27,7 @@
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Strategis (Renstra) Badan Pengembangan dan Pembinaan Bahasa 2020-2024 </div>
                       <span class="btn btn-warning tombol" data-toggle="modal" data-target="#renstraModal">Buka</span>
-                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                    <span class="btn btn-success tombol" >Unduh</span>
                   </div>
                 </div>
                 <div class="col-lg-8 separator"></div>
@@ -58,8 +58,8 @@
                 <div class="row">
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Kinerja Tahunan Pustanda Tahun 2022</div>
-                    <span class="btn btn-warning tombol" style="padding: 2px 5px;">Buka</span>
-                    <span class="btn btn-success tombol" style="padding: 2px 5px;">Unduh</span>
+                    <span class="btn btn-warning tombol" >Buka</span>
+                    <span class="btn btn-success tombol" >Unduh</span>
                   </div>
                 </div>
             </div>
@@ -99,25 +99,6 @@
       </footer>
       <!-- Footer end -->
 
-      <!-- Modal -->
-      <div id="renstraModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <h4 class="modal-title">RENSTRA BADAN BAHASA 2020-2024</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-              </div>
-              <div class="modal-body">
-                <iframe src="https://docs.google.com/gview?url=http://lagamonang.github.io/pustanda/files/Renstra_Badan_Bahasa_2020--2024.pdf&embedded=true" frameborder="0" width="100%" height="380px"></iframe>
-                  <div class="modal-footer" style="height:50px;">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Tutup</button>
-                  </div>
-              </div>
-            </div>
-        </div>
-      </div>
-
       <!-- Javascript Files
   ================================================== -->
       <!-- initialize jQuery Library -->
@@ -142,5 +123,24 @@
       <script src="./js/HTMLInclude.js"></script>
     </div>
     <!-- Body inner end -->
+
+    <!-- Modal -->
+    <div id="renstraModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">RENSTRA BADAN BAHASA 2020-2024</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <iframe id="pdfview" src="https://docs.google.com/gview?url=http://lagamonang.github.io/pustanda/files/Renstra_Badan_Bahasa_2020--2024.pdf&embedded=true" frameborder="0" ></iframe>
+                <div class="modal-footer" style="height:50px;">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Tutup</button>
+                </div>
+            </div>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
