--- a/informasisakip.html
+++ b/informasisakip.html
@@ -41,8 +41,8 @@
                 <div class="col-lg-8 separator"></div>
                 <div class="row">
                   <div class="col-lg-8 doc-container">
-                    <div class="doc-name">Perjanjian Kinerja Kepala Pusat Penguatan dan Pemberdayaan Bahasa dengan Kepala ,,,,</div>
-                    <span class="btn btn-warning tombol">Buka</span>
+                    <div class="doc-name">Perjanjian Kinerja Kepala Pusat Penguatan dan Pemberdayaan Bahasa 2023</div>
+                    <span class="btn btn-warning tombol" data-toggle="modal" data-target="#pkModal">Buka</span>
                     <span class="btn btn-success tombol">Unduh</span>
                   </div>
                 </div>
@@ -135,6 +135,23 @@
             </div>
             <div class="modal-body">
               <iframe id="pdfview" src="https://docs.google.com/gview?url=http://lagamonang.github.io/pustanda/files/Renstra_Badan_Bahasa_2020--2024.pdf&embedded=true" frameborder="0" ></iframe>
+                <div class="modal-footer" style="height:50px;">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Tutup</button>
+                </div>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div id="pkModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Perjanjian Kinerja Kapustanda 2023</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <iframe id="pdfview" src="https://docs.google.com/gview?url=http://lagamonang.github.io/pustanda/files/perjanjian-kinerja-kapustanda-2023.pdf&embedded=true" frameborder="0" ></iframe>
                 <div class="modal-footer" style="height:50px;">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Tutup</button>
                 </div>
