removing check sign

--- a/informasisakip.html
+++ b/informasisakip.html
@@ -25,15 +25,15 @@
                 </div>
                 <div class="row">
                   <div class="col-lg-8 doc-container">
-                    <div class="doc-name">Rencana Strategis (Renstra) Badan Pengembangan dan Pembinaan Bahasa 2020-2024 <i class="fa-solid fa-check fa-lg"></i></div>
-                      <span class="btn btn-warning tombol" data-toggle="modal" data-target="#renstraModal">Buka</span>
+                    <div class="doc-name">Rencana Strategis (Renstra) Badan Pengembangan dan Pembinaan Bahasa 2020-2024 </div>
+                    <span class="btn btn-warning tombol" data-toggle="modal" data-target="#renstraModal">Buka</span>
                     <span class="btn btn-success tombol" >Unduh</span>
                   </div>
                 </div>
                 <div class="col-lg-8 separator"></div>
                 <div class="row">
                   <div class="col-lg-8 doc-container">
-                    <div class="doc-name">Laporan Kinerja Pustanda Tahun 2022 <i class="fa-solid fa-check fa-lg"></i></div>
+                    <div class="doc-name">Laporan Kinerja Pustanda Tahun 2022 </div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#lakinModal">Buka</span>
                     <span class="btn btn-success tombol">Unduh</span>
                   </div>
@@ -41,7 +41,7 @@
                 <div class="col-lg-8 separator"></div>
                 <div class="row">
                   <div class="col-lg-8 doc-container">
-                    <div class="doc-name">Perjanjian Kinerja Kepala Pusat Penguatan dan Pemberdayaan Bahasa 2023 <i class="fa-solid fa-check fa-lg"></i></div>
+                    <div class="doc-name">Perjanjian Kinerja Kepala Pusat Penguatan dan Pemberdayaan Bahasa 2023 </div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#pkModal">Buka</span>
                     <span class="btn btn-success tombol">Unduh</span>
                   </div>
@@ -49,7 +49,7 @@
                 <div class="col-lg-8 separator"></div>
                 <div class="row">
                   <div class="col-lg-8 doc-container">
-                    <div class="doc-name">Rencana Aksi Pustanda Tahun 2023 <i class="fa-solid fa-check fa-lg"></i></div>
+                    <div class="doc-name">Rencana Aksi Pustanda Tahun 2023</div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#renaksiModal">Buka</span>
                     <span class="btn btn-success tombol">Unduh</span>
                   </div>
