--- a/informasisakip.html
+++ b/informasisakip.html
@@ -27,7 +27,7 @@
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Strategis (Renstra) Badan Pengembangan dan Pembinaan Bahasa 2020-2024 </div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#renstraModal">Buka</span>
-                    <span class="btn btn-success tombol" >Unduh</span>
+                    <span class="btn btn-success tombol" ><a href="files/Renstra_Badan_Bahasa_2020--2024.pdf">Unduh</a></span>
                   </div>
                 </div>
                 <div class="col-lg-8 separator"></div>
@@ -35,7 +35,7 @@
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Laporan Kinerja Pustanda Tahun 2022 </div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#lakinModal">Buka</span>
-                    <span class="btn btn-success tombol">Unduh</span>
+                    <span class="btn btn-success tombol"><a href="files/laporan-kinerja-pustanda-2022.pdf">Unduh</a></span>
                   </div>
                 </div>
                 <div class="col-lg-8 separator"></div>
@@ -43,7 +43,7 @@
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Perjanjian Kinerja Kepala Pusat Penguatan dan Pemberdayaan Bahasa 2023 </div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#pkModal">Buka</span>
-                    <span class="btn btn-success tombol">Unduh</span>
+                    <span class="btn btn-success tombol"><a href="files/perjanjian-kinerja-kapustanda-2023.pdf">Unduh</a></span>
                   </div>
                 </div>
                 <div class="col-lg-8 separator"></div>
@@ -51,7 +51,7 @@
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Aksi Pustanda Tahun 2023</div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#renaksiModal">Buka</span>
-                    <span class="btn btn-success tombol">Unduh</span>
+                    <span class="btn btn-success tombol"><a href="files/rencana-aksi-pustanda-2023.pdf">Unduh</a></span>
                   </div>
                 </div>
                 <div class="col-lg-8 separator"></div>
@@ -59,7 +59,7 @@
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Kinerja Tahunan Pustanda Tahun 2023</div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#rktModal">Buka</span>
-                    <span class="btn btn-success tombol" >Unduh</span>
+                    <span class="btn btn-success tombol" ><a href="files/rkt-pustanda-2023.pdf">Unduh</a></span>
                   </div>
                 </div>
             </div>
