--- a/index.html
+++ b/index.html
@@ -27,25 +27,72 @@
 
       <section class="content">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <h3 class="column-title"> </h3>
+          <div class="row pt-0" >
+            <div class="col-lg-12">
+              <h3 class="column-title">Galeri </h3>
+              <div class="galery-wrapper" style="display:flexbox;">
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
+                <div class="galery">
+                  <a target="_blank" href="images/galeri/foto1.jpg">
+                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
+                  </a>
+                  <div class="imgdesc">Add a description of the image here</div>
+                </div>
 
-
-            </div>
-            <!-- Col end -->
-
-            <div class="col-lg-6 mt-5 mt-lg-0">
-              <h3 class="column-title"> </h3>
-              <!--
-              <div class="row all-clients">
-                <div class="col-sm-4 col-6">
-                  <figure class="clients-logo">
-                    <a href="#!"><img loading="lazy" class="img-fluid" src="images/clients/client1.png" alt="clients-logo" /></a>
-                  </figure>
-                </div>-->
-                <!-- Client 1 end -->
-
+              </div>
             </div>
             <!-- Col end -->
           </div>
