adding lightbox gallery to index

--- a/index.html
+++ b/index.html
@@ -25,82 +25,10 @@
         <div data-include="statistik.html"></div>
       </section>
 
-      <section class="content">
-        <div class="container">
-          <div class="row pt-0" >
-            <div class="col-lg-12">
-              <h3 class="column-title">Galeri </h3>
-              <div class="galery-wrapper" style="display:flexbox;">
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-                <div class="galery">
-                  <a target="_blank" href="images/galeri/foto1.jpg">
-                    <img src="images/galeri/foto1.jpg" alt="Foto 1">
-                  </a>
-                  <div class="imgdesc">Add a description of the image here</div>
-                </div>
-
-              </div>
-            </div>
-            <!-- Col end -->
-          </div>
-          <!--/ Content row end -->
-        </div>
-        <!--/ Container end -->
+      <!-- Lightbox Gallery-->
+      <section id="lightbox" class="content">
+        <div data-include="lightbox-gallery2.html"></div>
       </section>
-      <!-- Content end -->
 
       <footer id="footer" class="footer bg-overlay">
         <div data-include="footer-main.html"></div>
@@ -158,6 +86,8 @@
       <script src="js/script.js"></script>
       <!-- Include HTML-->
       <script src="./js/HTMLInclude.js"></script>
+      <!-- Lightbox -->
+      <script src="./js/lightbox.js"></script>
 
     </div>
     <!-- Body inner end -->
