--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -11,12 +11,12 @@
       <div class="imgdesc">Add a description of the image here</div>
     </div>
     <div class="column">
-      <img src="images/galeri/foto1.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
-      <div class="imgdesc">Add a description of the image here</div>
+      <img src="images/galeri/mvp.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
+      <div class="imgdesc">Pegawai Bermotif</div>
     </div>
     <div class="column">
-      <img src="images/galeri/gambar1.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
-      <div class="imgdesc">Add a description of the image here</div>
+      <img src="images/galeri/fathur.png" onclick="openModal();currentSlide(4)" class="hover-shadow">
+      <div class="imgdesc">Pegawai Berjas</div>
     </div>
   </div>
   
@@ -27,22 +27,22 @@
   
       <div class="mySlides">
         <div class="numbertext">1 / 4</div>
-        <img src="images/galeri/foto1.jpg" style="width:100%;">
+        <img src="images/galeri/foto1.jpg" style="width:100%;" alt="Foto1">
       </div>
   
       <div class="mySlides">
         <div class="numbertext">2 / 4</div>
-        <img src="images/galeri/gambar1.jpg" style="width:100%;">
+        <img src="images/galeri/gambar1.jpg" style="width:100%;" alt="Bu Emma">
       </div>
   
       <div class="mySlides">
         <div class="numbertext">3 / 4</div>
-        <img src="images/galeri/foto1.jpg" style="width:100%;">
+        <img src="images/galeri/mvp.png" style="width:100%;" alt="Pegawai Bermotif">
       </div>
   
       <div class="mySlides">
         <div class="numbertext">4 / 4</div>
-        <img src="images/galeri/gambar1.jpg" style="width:100%;">
+        <img src="images/galeri/fathur.png" style="width:100%;" alt="Pegawai Berjas">
       </div>
   
       <!-- Next/previous controls -->
