--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -28,6 +28,7 @@
       <div class="mySlides">
         <div class="numbertext">1 / 4</div>
         <img src="images/galeri/foto1.jpg" style="width:100%;" alt="Foto1">
+        <div class="" style="color: white; text-align: center;font-size: small;">Pegawai Berjas</div>
       </div>
   
       <div class="mySlides">
@@ -38,6 +39,7 @@
       <div class="mySlides">
         <div class="numbertext">3 / 4</div>
         <img src="images/galeri/mvp.png" style="width:100%;" alt="Pegawai Bermotif">
+        <div class="" style="color: white; text-align: center;font-size: small;">Pegawai Bermotif</div>
       </div>
   
       <div class="mySlides">
