--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -18,6 +18,10 @@
       <img src="images/galeri/fathur.png" onclick="openModal();currentSlide(4)" class="hover-shadow">
       <div class="imgdesc">Pegawai Berjas</div>
     </div>
+    <div class="column">
+      <img src="images/galeri/gambar5.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
+      <div class="imgdesc">Pegawai Berbaju Biru</div>
+    </div>
   </div>
   
   <!-- The Modal/Lightbox -->
@@ -26,25 +30,30 @@
     <div class="modal-content">
   
       <div class="mySlides">
-        <div class="numbertext">1 / 4</div>
+        <div class="numbertext">1 / 5</div>
         <img src="images/galeri/foto1.jpg" style="width:100%;" alt="Foto1">
         <div class="" style="color: white; text-align: center;font-size: small;">Pegawai Berjas</div>
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">2 / 4</div>
+        <div class="numbertext">2 / 5</div>
         <img src="images/galeri/gambar1.jpg" style="width:100%;" alt="Bu Emma">
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">3 / 4</div>
+        <div class="numbertext">3 / 5</div>
         <img src="images/galeri/mvp.png" style="width:100%;" alt="Pegawai Bermotif">
         <div class="" style="color: white; text-align: center;font-size: small;">Pegawai Bermotif</div>
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">4 / 4</div>
+        <div class="numbertext">4 / 5</div>
         <img src="images/galeri/fathur.png" style="width:100%;" alt="Pegawai Berjas">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">5 / 5</div>
+        <img src="images/galeri/gambar5" style="width:100%;" alt="Pegawai Berbaju Biru">
       </div>
   
       <!-- Next/previous controls -->
