--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -22,6 +22,10 @@
       <img src="images/galeri/gambar5.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
       <div class="imgdesc">Pegawai Berbaju Biru</div>
     </div>
+    <div class="column">
+      <img src="images/galeri/gambar6.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
+      <div class="imgdesc">Pegawai Berseragam</div>
+    </div>
   </div>
   
   <!-- The Modal/Lightbox -->
@@ -30,30 +34,35 @@
     <div class="modal-content">
   
       <div class="mySlides">
-        <div class="numbertext">1 / 5</div>
+        <div class="numbertext">1 / 6</div>
         <img src="images/galeri/foto1.jpg" style="width:100%;" alt="Foto1">
         <div class="" style="color: white; text-align: center;font-size: small;">Pegawai Berjas</div>
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">2 / 5</div>
+        <div class="numbertext">2 / 6</div>
         <img src="images/galeri/gambar1.jpg" style="width:100%;" alt="Bu Emma">
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">3 / 5</div>
+        <div class="numbertext">3 / 6</div>
         <img src="images/galeri/mvp.png" style="width:100%;" alt="Pegawai Bermotif">
         <div class="" style="color: white; text-align: center;font-size: small;">Pegawai Bermotif</div>
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">4 / 5</div>
+        <div class="numbertext">4 / 6</div>
         <img src="images/galeri/fathur.png" style="width:100%;" alt="Pegawai Berjas">
       </div>
 
       <div class="mySlides">
-        <div class="numbertext">5 / 5</div>
-        <img src="images/galeri/gambar5" style="width:100%;" alt="Pegawai Berbaju Biru">
+        <div class="numbertext">5 / 6</div>
+        <img src="images/galeri/gambar5.jpg" style="width:100%;" alt="Pegawai Berbaju Biru">
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">6 / 6</div>
+        <img src="images/galeri/gambar6.jpg" style="width:100%;" alt="">
       </div>
   
       <!-- Next/previous controls -->
