--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="column">
       <img src="images/galeri/foto1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
-      <div class="imgdesc">Add a description of the image here</div>
+      <div class="imgdesc">???</div>
     </div>
     <div class="column">
       <img src="images/galeri/gambar1.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
@@ -24,7 +24,7 @@
     </div>
     <div class="column">
       <img src="images/galeri/gambar6.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
-      <div class="imgdesc">Pegawai Berseragam</div>
+      <div class="imgdesc">Pegawai Berseragam Korpri</div>
     </div>
   </div>
   
