--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -36,7 +36,7 @@
       <div class="mySlides">
         <div class="numbertext">1 / 6</div>
         <img src="images/galeri/foto1.jpg" style="width:100%;" alt="Foto1">
-        <div class="" style="color: white; text-align: center;font-size: small;">Pegawai Berjas</div>
+        <div class="" style="color: white; text-align: center;font-size: small;"> ??? </div>
       </div>
   
       <div class="mySlides">
