updating code myslides and slidedesc

--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -31,38 +31,42 @@
   <!-- The Modal/Lightbox -->
   <div id="myModal" class="modal">
     <span class="close cursor" onclick="closeModal()">&times;</span>
-    <div class="modal-content">
+    <div class="modal-content vertical-center">
   
-      <div class="mySlides">
+      <div class="mySlides" style="border:1px solid white">
         <div class="numbertext">1 / 6</div>
-        <img src="images/galeri/foto1.jpg" style="width:80%;" alt="Foto1">
-        <div class="" style="color: white; text-align: center;font-size: small;"> ??? </div>
+        <img src="images/galeri/foto1.jpg" style="height:100%" alt="Foto1">
+        <div class="slidedesc" >???</div>
       </div>
   
       <div class="mySlides">
         <div class="numbertext">2 / 6</div>
-        <img src="images/galeri/gambar1.jpg" style="width:80%;" alt="Bu Emma">
+        <img src="images/galeri/gambar1.jpg" style="height:100%" alt="Bu Emma">
+        <div class="slidedesc" >Penerjemahan</div>
       </div>
   
       <div class="mySlides">
         <div class="numbertext">3 / 6</div>
-        <img src="images/galeri/mvp.png" style="width:80%;" alt="Pegawai Bermotif">
-        <div class="" style="color: white; text-align: center;font-size: small;">Pegawai Bermotif</div>
+        <img src="images/galeri/mvp.png" style="height:100%" alt="Pegawai Bermotif">
+        <div class="slidedesc" >Pegawai Bermotif</div>
       </div>
   
       <div class="mySlides">
         <div class="numbertext">4 / 6</div>
-        <img src="images/galeri/fathur.png" style="width:80%;" alt="Pegawai Berjas">
+        <img src="images/galeri/fathur.png" style="height:100%" alt="Pegawai Berjas">
+        <div class="slidedesc" >Pegawai Berjas</div>
       </div>
 
       <div class="mySlides">
         <div class="numbertext">5 / 6</div>
-        <img src="images/galeri/gambar5.jpg" style="width:80%;" alt="Pegawai Berbaju Biru">
+        <img src="images/galeri/gambar5.jpg" style="height:100%" alt="Pegawai Berbaju Biru">
+        <div class="slidedesc" >Mancakrida</div>
       </div>
 
       <div class="mySlides">
         <div class="numbertext">6 / 6</div>
-        <img src="images/galeri/gambar6.jpg" style="width:80%;" alt="">
+        <img src="images/galeri/gambar6.jpg" style="height:100%" alt="">
+        <div class="slidedesc" > Upacara</div>
       </div>
   
       <!-- Next/previous controls -->
@@ -70,9 +74,9 @@
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
   
       <!-- Caption text -->
-      <div class="caption-container">
+      <!-- <div class="caption-container">
         <p id="caption"></p>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
