--- a/layanan.html
+++ b/layanan.html
@@ -9,7 +9,9 @@
       <div class="col-lg-6 col-md-6 mb-5">
         <div class="ts-service-box">
           <div class="ts-service-image-wrapper">
+            <a href="https://bipa.kemdikbud.go.id/portal" target="_blank">
             <img id="logo" loading="lazy" class="w-50" src="images/layanan/logo_bipa.png" alt="service-image" />
+            </a>
           </div>
           <div class="d-flex">
             <div class="ts-service-info">
@@ -26,7 +28,9 @@
       <div class="col-lg-6 col-md-6 mb-6">
         <div class="ts-service-box">
           <div class="ts-service-image-wrapper">
+            <a href="penerjemahan.kemdikbud.go.id" target="_blank">
             <img id="logo" loading="lazy" class="w-50" src="images/layanan/logo_penerjemahan.png" alt="service-image" />
+            </a>
           </div>
           <div class="d-flex">
             <div class="ts-service-info">
