--- a/layanan.html
+++ b/layanan.html
@@ -28,7 +28,7 @@
       <div class="col-lg-6 col-md-6 mb-6">
         <div class="ts-service-box">
           <div class="ts-service-image-wrapper">
-            <a href="penerjemahan.kemdikbud.go.id" target="_blank">
+            <a href="https://penerjemahan.kemdikbud.go.id" target="_blank">
             <img id="logo" loading="lazy" class="w-50" src="images/layanan/logo_penerjemahan.png" alt="service-image" />
             </a>
           </div>
