adding file lakin and renstra

--- a/informasisakip.html
+++ b/informasisakip.html
@@ -27,7 +27,7 @@
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Rencana Strategis (Renstra) Badan Pengembangan dan Pembinaan Bahasa 2020-2024 </div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#renstraModal">Buka</span>
-                    <span class="btn btn-success tombol" ><a href="files/Renstra_Badan_Bahasa_2020--2024.pdf">Unduh</a></span>
+                    <span class="btn btn-success tombol" ><a href="files/Renstra-Badan Bahasa 2020--2024_Final.pdf">Unduh</a></span>
                   </div>
                 </div>
                 <div class="col-lg-8 separator"></div>
@@ -35,7 +35,7 @@
                   <div class="col-lg-8 doc-container">
                     <div class="doc-name">Laporan Kinerja Pustanda Tahun 2022 </div>
                     <span class="btn btn-warning tombol" data-toggle="modal" data-target="#lakinModal">Buka</span>
-                    <span class="btn btn-success tombol"><a href="files/laporan-kinerja-pustanda-2022.pdf">Unduh</a></span>
+                    <span class="btn btn-success tombol"><a href="files/Laporan-Kinerja-Pustanda-Tahun-2022.pdf">Unduh</a></span>
                   </div>
                 </div>
                 <div class="col-lg-8 separator"></div>
