--- a/layanan.html
+++ b/layanan.html
@@ -17,7 +17,7 @@
             <div class="ts-service-info">
               <h3 class="service-box-title"><a href="#">Bahasa Indonesia bagi Penutur Asing</a></h3>
               <p>Layanan fasilitasi dan koordinasi dalam bidang Bahasa Indonesia bagi Penutur Asing (BIPA) untuk meningkatkan fungsi bahasa Indonesia menjadi bahasa internasional.</p>
-              <a class="learn-more d-inline-block" href="https://bipa.kemdikbud.go.id/portal" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
+              <a class="learn-more d-inline-block" href="https://bipa.kemdikbud.go.id/portal" aria-label="service-details" target="_blank"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
             </div>
           </div>
         </div>
@@ -36,7 +36,7 @@
             <div class="ts-service-info">
               <h3 class="service-box-title"><a href="#">Penerjemahan</a></h3>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat eius saepe quo quod porro, reiciendis incidunt deserunt iusto labore aliquid?</p>
-              <a class="learn-more d-inline-block" href="https://penerjemahan.kemdikbud.go.id/" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
+              <a class="learn-more d-inline-block" href="https://penerjemahan.kemdikbud.go.id/" aria-label="service-details" target="_blank"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
             </div>
           </div>
         </div>
