--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -11,11 +11,11 @@
       <div class="imgdesc">Add a description of the image here</div>
     </div>
     <div class="column">
-      <img src="images/galeri/mvp.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
+      <img src="images/galeri/foto3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
       <div class="imgdesc">Pegawai Bermotif</div>
     </div>
     <div class="column">
-      <img src="images/galeri/fathur.png" onclick="openModal();currentSlide(4)" class="hover-shadow">
+      <img src="images/galeri/foto4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
       <div class="imgdesc">Pegawai Berjas</div>
     </div>
     <div class="column">
@@ -47,13 +47,13 @@
   
       <div class="mySlides">
         <div class="numbertext">3 / 6</div>
-        <img src="images/galeri/mvp.png" style="height:100%" alt="Pegawai Bermotif">
+        <img src="images/galeri/foto3.jpg" style="height:100%" alt="Pegawai Bermotif">
         <div class="slidedesc" >Pegawai Bermotif</div>
       </div>
   
       <div class="mySlides">
         <div class="numbertext">4 / 6</div>
-        <img src="images/galeri/fathur.png" style="height:100%" alt="Pegawai Berjas">
+        <img src="images/galeri/foto4.jpg" style="height:100%" alt="Pegawai Berjas">
         <div class="slidedesc" >Pegawai Berjas</div>
       </div>
 
