--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -29,7 +29,7 @@
   </div>
   
   <!-- The Modal/Lightbox -->
-  <div id="myModal" class="modal">
+  <div id="myModal" class="modal lightbox-modal">
     <span class="close cursor" onclick="closeModal()">&times;</span>
     <div class="modal-content vertical-center">
   
