updating css modal

--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -12,26 +12,26 @@
     </div>
     <div class="column">
       <img src="images/galeri/foto3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
-      <div class="imgdesc">Pegawai Bermotif</div>
+      <div class="imgdesc">Pemimpin Upacara</div>
     </div>
     <div class="column">
       <img src="images/galeri/foto4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
-      <div class="imgdesc">Pegawai Berjas</div>
+      <div class="imgdesc">Indonesia Raya</div>
     </div>
     <div class="column">
       <img src="images/galeri/gambar5.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
-      <div class="imgdesc">Pegawai Berbaju Biru</div>
+      <div class="imgdesc">Mancakrida</div>
     </div>
     <div class="column">
       <img src="images/galeri/gambar6.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
-      <div class="imgdesc">Pegawai Berseragam Korpri</div>
+      <div class="imgdesc">Lagi Baca</div>
     </div>
   </div>
   
   <!-- The Modal/Lightbox -->
-  <div id="myModal" class="modal lightbox-modal">
+  <div id="myModal" class="lightbox-modal">
     <span class="close cursor" onclick="closeModal()">&times;</span>
-    <div class="modal-content vertical-center">
+    <div class="modal-contents vertical-center">
   
       <div class="mySlides" style="border:1px solid white">
         <div class="numbertext">1 / 6</div>
@@ -48,13 +48,13 @@
       <div class="mySlides">
         <div class="numbertext">3 / 6</div>
         <img src="images/galeri/foto3.jpg" style="height:100%" alt="Pegawai Bermotif">
-        <div class="slidedesc" >Pegawai Bermotif</div>
+        <div class="slidedesc" >Pemimpin Upacara</div>
       </div>
   
       <div class="mySlides">
         <div class="numbertext">4 / 6</div>
         <img src="images/galeri/foto4.jpg" style="height:100%" alt="Pegawai Berjas">
-        <div class="slidedesc" >Pegawai Berjas</div>
+        <div class="slidedesc" >Indonesia Raya</div>
       </div>
 
       <div class="mySlides">
