updating file and credits

--- a/informasisakip.html
+++ b/informasisakip.html
@@ -80,8 +80,8 @@
                     <script>
                       document.write(new Date().getFullYear());
                     </script>
-                    Designed by Ladislaus Laga Monang and <a href="https://www.linkedin.com/in/ferry-yun-kurniawan-20bb5216b/">Ferry Yun Kurniawan</a></span
-                  >
+                    <div data-include="credits.html"></div>
+                  </span                  >
                 </div>
               </div>
             </div>
