--- a/lightbox-gallery2.html
+++ b/lightbox-gallery2.html
@@ -3,19 +3,19 @@
 <h3>Galeri</h3>
 <div class="row">
     <div class="column">
-      <img src="images/galeri/foto1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+      <img src="images/galeri/gambar1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
       <div class="imgdesc">???</div>
     </div>
     <div class="column">
-      <img src="images/galeri/gambar1.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+      <img src="images/galeri/gambar2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
       <div class="imgdesc">Add a description of the image here</div>
     </div>
     <div class="column">
-      <img src="images/galeri/foto3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+      <img src="images/galeri/gambar3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
       <div class="imgdesc">Pemimpin Upacara</div>
     </div>
     <div class="column">
-      <img src="images/galeri/foto4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+      <img src="images/galeri/gambar4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
       <div class="imgdesc">Indonesia Raya</div>
     </div>
     <div class="column">
@@ -24,6 +24,22 @@
     </div>
     <div class="column">
       <img src="images/galeri/gambar6.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
+      <div class="imgdesc">Upacara</div>
+    </div>
+    <div class="column">
+      <img src="images/galeri/gambar7.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
+      <div class="imgdesc">Lagi Baca</div>
+    </div>
+    <div class="column">
+      <img src="images/galeri/gambar8.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
+      <div class="imgdesc">Lagi Baca</div>
+    </div>
+    <div class="column">
+      <img src="images/galeri/gambar9.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
+      <div class="imgdesc">Lagi Baca</div>
+    </div>
+    <div class="column">
+      <img src="images/galeri/gambar10.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
       <div class="imgdesc">Lagi Baca</div>
     </div>
   </div>
@@ -34,38 +50,62 @@
     <div class="modal-contents vertical-center">
   
       <div class="mySlides" style="border:1px solid white">
-        <div class="numbertext">1 / 6</div>
-        <img src="images/galeri/foto1.jpg" style="height:100%" alt="Foto1">
+        <div class="numbertext">1 / 10</div>
+        <img src="images/galeri/gambar1.jpg" style="height:100%" alt="Foto1">
         <div class="slidedesc" >???</div>
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">2 / 6</div>
-        <img src="images/galeri/gambar1.jpg" style="height:100%" alt="Bu Emma">
+        <div class="numbertext">2 / 10</div>
+        <img src="images/galeri/gambar2.jpg" style="height:100%" alt="Bu Emma">
         <div class="slidedesc" >Penerjemahan</div>
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">3 / 6</div>
-        <img src="images/galeri/foto3.jpg" style="height:100%" alt="Pegawai Bermotif">
+        <div class="numbertext">3 / 10</div>
+        <img src="images/galeri/gambar3.jpg" style="height:100%" alt="Pegawai Bermotif">
         <div class="slidedesc" >Pemimpin Upacara</div>
       </div>
   
       <div class="mySlides">
-        <div class="numbertext">4 / 6</div>
-        <img src="images/galeri/foto4.jpg" style="height:100%" alt="Pegawai Berjas">
+        <div class="numbertext">4 / 10</div>
+        <img src="images/galeri/gambar4.jpg" style="height:100%" alt="Pegawai Berjas">
         <div class="slidedesc" >Indonesia Raya</div>
       </div>
 
       <div class="mySlides">
-        <div class="numbertext">5 / 6</div>
+        <div class="numbertext">5 / 10</div>
         <img src="images/galeri/gambar5.jpg" style="height:100%" alt="Pegawai Berbaju Biru">
         <div class="slidedesc" >Mancakrida</div>
       </div>
 
       <div class="mySlides">
-        <div class="numbertext">6 / 6</div>
+        <div class="numbertext">6 / 10</div>
         <img src="images/galeri/gambar6.jpg" style="height:100%" alt="">
+        <div class="slidedesc" > Upacara</div>
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">7 / 10</div>
+        <img src="images/galeri/gambar7.jpg" style="height:100%" alt="">
+        <div class="slidedesc" > Upacara</div>
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">8 / 10</div>
+        <img src="images/galeri/gambar8.jpg" style="height:100%" alt="">
+        <div class="slidedesc" > Upacara</div>
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">9 / 10</div>
+        <img src="images/galeri/gambar9.jpg" style="height:100%" alt="">
+        <div class="slidedesc" > Upacara</div>
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">10 / 10</div>
+        <img src="images/galeri/gambar10.jpg" style="height:100%" alt="">
         <div class="slidedesc" > Upacara</div>
       </div>
   
