--- a/index.html
+++ b/index.html
@@ -43,18 +43,17 @@
                     <script>
                       document.write(new Date().getFullYear());
                     </script>
-                    Designed by Ladislaus Laga Monang and <a href="https://www.linkedin.com/in/ferry-yun-kurniawan-20bb5216b/">Ferry Yun Kurniawan</a></span
-                  >
+                    <div data-include="credits.html"></div>
+                  </span>
                 </div>
               </div>
             </div>
+          </div>
 
-
-            <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
-              <button class="btn btn-primary" title="Back to Top">
-                <i class="fa fa-angle-double-up"></i>
-              </button>
-            </div>
+          <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
+            <button class="btn btn-primary" title="Back to Top">
+              <i class="fa fa-angle-double-up"></i>
+            </button>
           </div>
           <!-- Container end -->
         </div>
